[Curl] Memory leak. https://bugs.webkit.org/show_bug.cgi?id=144327

Reviewed by Brent Fulgham.

When a data url is loaded, the ResourceHandle is not released.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::ResourceHandleManager::startJob):


Canonical link: https://commits.webkit.org/162339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183485 268f45cc-cd09-0410-ab3c-d52691b4dbfc